--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">App Name: A Coding Project</h1>
-                    <h4 class="lead">Go through life one loop at a time. Through Javascript,
-                        we created a project that displays the numbers from 0 to 100.
-                        But, the most awesome this is that all the even numbers
-                        are <strong>BOLDED</strong>. Try it out.
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Fizzy Bubbly : A Coding Project</h1>
+                    <h4 class="lead">Fizzing and Bubbling all the way! Counting from 1 to 100, if the
+                        number is a multiple of Fizzy it's <span class="fw-bold"> Fizz</span>.
+                        If it's a multiple of Bubbly, it's a <span class="fw-bold">Buzz</span>. If it's both, OH Boy,
+                        it's <span class="fw-bold">FizzBuzz</span> !
+                        Enter each number in it's own input and see what happens.
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap
@@ -93,9 +94,9 @@
                         </div>
                     </h5>
                 </div>
-                <div class="col">
-                    <img src="img/Hunned/HunnedLogo.svg" class="img-fluid center-block d-block mx-auto my-auto"
-                        width="400" height="500" alt="Hunned Logo">
+                <div class="col d-flex align-content-center">
+                    <img src="img/logo_large.png" class="img-fluid center-block d-block mx-auto my-auto" width="400"
+                        height="500" alt="FizzyBubbly Logo">
                 </div>
             </div>
         </div>
