--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">Fizzy Bubbly : A Coding Project</h1>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Fizzy Bubbly <br> A Coding Project</h1>
                     <h4 class="lead">Fizzing and Bubbling all the way! Counting from 1 to 100, if the
                         number is a multiple of Fizzy it's <span class="fw-bold"> Fizz</span>.
                         If it's a multiple of Bubbly, it's a <span class="fw-bold">Buzz</span>. If it's both, OH Boy,
@@ -94,9 +94,9 @@
                         </div>
                     </h5>
                 </div>
-                <div class="col d-flex align-content-center">
-                    <img src="img/logo_large.png" class="img-fluid center-block d-block mx-auto my-auto" width="400"
-                        height="500" alt="FizzyBubbly Logo">
+                <div class="col">
+                    <img src="img/FizzyBubbly.svg" class="img-fluid center-block d-block mt-5" width="500"
+                        alt="FizzyBubbly Logo">
                 </div>
             </div>
         </div>
