--- a/app.html
+++ b/app.html
@@ -55,7 +55,49 @@
     <!-- Main Section -->
     <main class="flex-shrink--">
         <div class="container">
-
+            <div class="row">
+                <div class="col-5 mt-3 border-end border-2">
+                    <img src="/img/FizzyBubbly.svg" class="img-fluid" alt="Fizzy Bubbly Logo" height="150">
+                    <h1 class="display-5">A coding project : </h1>
+                    <p class="lead">
+                        Fizzing and Bubbling all the way! Counting from 1 to 100, if the
+                        number is a multiple of Fizzy it's <span class="fw-bold"> Fizz</span>.
+                        If it's a multiple of Bubbly, it's a <span class="fw-bold">Buzz</span>. If it's both, OH Boy,
+                        it's <span class="fw-bold">FizzBuzz</span> !
+                        Enter each number in it's own input and see what happens.
+                    </p>
+                </div>
+                <div class="col-7 mt-4">
+                    <h5>Enter values :</h5>
+                    <form class="row">
+                        <div class="col">
+                            <label for="fizz" class="form-label">Fizz</label>
+                            <input class="form-control border-danger" type="number" id="fizz" aria-label="Fizz value"
+                                placeholder="Fizz">
+                        </div>
+                        <div class="col">
+                            <label for="buzz" class="form-label">Buzz</label>
+                            <input class="form-control border-danger" type="number" id="buzz" aria-label="Buzz value"
+                                placeholder="Buzz">
+                        </div>
+                        <div class="row mt-2 d-flex justify-content-end">
+                            <button class="btn btn-outline-dark w-auto" id="bubblyBtn" type="button">
+                                Bubbly!
+                            </button>
+                        </div>
+                    </form>
+                    <h5 class="mt-3 border-bottom border-1">Results :</h5>
+                    <div class="alert alert-danger invisible fade show" id="alert" role="alert">
+                    </div>
+                    <div class="table-responsive col-12">
+                        <table class="table table-striped">
+                            <tbody id="results">
+                                <!-- Results go here -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <!-- Footer Section -->
