--- a/app.html
+++ b/app.html
@@ -55,8 +55,8 @@
     <!-- Main Section -->
     <main class="flex-shrink--">
         <div class="container">
-            <div class="row">
-                <div class="col-5 mt-3 border-end border-2">
+            <div class="row row-cols-1 row-cols-lg-2">
+                <div class="col mt-3 border-end border-2 order-first order-lg-first">
                     <img src="/img/FizzyBubbly.svg" class="img-fluid" alt="Fizzy Bubbly Logo" height="150">
                     <h1 class="display-5">A coding project : </h1>
                     <p class="lead">
@@ -67,7 +67,7 @@
                         Enter each number in it's own input and see what happens.
                     </p>
                 </div>
-                <div class="col-7 mt-4">
+                <div class="col mt-4">
                     <h5>Enter values :</h5>
                     <form class="row">
                         <div class="col">
@@ -87,8 +87,6 @@
                         </div>
                     </form>
                     <h5 class="mt-3 border-bottom border-1">Results :</h5>
-                    <div class="alert alert-danger invisible fade show" id="alert" role="alert">
-                    </div>
                     <div class="table-responsive col-12">
                         <table class="table table-striped">
                             <tbody id="results">
