--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project by Razvan Roman</title>
+    <!-- Change App Name Here -->
+    <title>FizzyBubbly: A Coding Project by Razvan Roman</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -23,9 +24,10 @@
     <!-- Nav Section -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
+            <!-- Change App Name Here -->
             <a class="navbar-brand" href="index.html"><img src="img/RRLogoWhite.svg"
-                    class="d-inline-block align-text-center" width="30" height="30" alt="Razvan Roman Logo"> App
-                Name</a>
+                    class="d-inline-block align-text-center" width="30" height="30" alt="Razvan Roman Logo">
+                FizzyBubbly</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -36,7 +38,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="app.html">The App</a>
+                        <a class="nav-link" href="app.html">See the Fizz</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="code.html">The Code</a>
@@ -109,8 +111,8 @@
                     <div class="footer-text">
                         <span class="text-muted">&copy;2021</span> Razvan Roman | razvan.roman91@outlook.com
                         <span class="text-muted"><a href="https://www.jimdo.com/" class="text-muted"><br>All logos
-                            created on
-                            https://www.jimdo.com/</a></span>
+                                created on
+                                https://www.jimdo.com/</a></span>
                     </div>
                 </div>
                 <div class="col d-flex align-items-center justify-content-center">
