Add GitHub Repo Link

--- a/code.html
+++ b/code.html
@@ -15,7 +15,10 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
+    <!-- Prism CSS -->
     <link rel="stylesheet" href="css/prism.css">
+
+    <!-- Site CSS -->
     <link rel="stylesheet" href="css/site.css">
     <link rel="icon" href="img/favicon-32x32.png">
 
@@ -45,7 +48,7 @@
                         <a class="nav-link active" aria-current="page" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://github.com/razvanr91/JsSiteTemplate" target="_blank" class="nav-link">Git
+                        <a href="https://github.com/razvanr91/FizzyBubbly" target="_blank" class="nav-link">Git
                             Repo</a>
                     </li>
                     <li class="nav-item">
